# nanoGPT

./: README.md  README.rst  pyproject.toml
nanogpt/: bigram.py  gpt.py
tests/: test_nanogpt.py
