[tool.poetry]
name = "nanoGPT"
version = "0.1.0"
description = ""
authors = ["hemantr05 <basketballlife600@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
